# sandbox

./: Cargo.toml  README.md  renovate.json  test.json  workspace.code-workspace
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: ci.yaml  ci.yml  dev-image.yaml  mitoma-org-ci.yaml
compiler-book/: Makefile  README.md  mcc  mcc.c  test.sh
doc/: state.md
docker/dev/: Dockerfile  mise.toml  sver.toml
examples/: write_to_easing_value_image.rs  write_to_image.rs
litegres/docker/: Dockerfile
litegres/docker/supervisord/: supervisord.conf
mitoma-org/: Dockerfile  build.sh  deploy.sh  sver.toml
mitoma-org/backend/: Cargo.toml
mitoma-org/backend/src/: content.rs  health.rs  lib.rs  main.rs
mitoma-org/contents/: about_me.md  home.md
mitoma-org/contents/blog/: actix-web-multidomain.md  create_blog.md  life-2022.md  poormans-rdbms.md  tech-tips.md
mitoma-org/contents/diary/: 2022-08-01.md
mitoma-org/contents_hello/: index.html
mitoma-org/contents_hello/font_rasterizer/: font_rusterizer.d.ts  font_rusterizer.js  font_rusterizer_bg.js  font_rusterizer_bg.wasm.d.ts  index.html
mitoma-org/contents_hello/font_rasterizer2/: font_rasterizer_example.d.ts  font_rasterizer_example.js  font_rasterizer_example_bg.wasm.d.ts  index.html  package.json
mitoma-org/frontend/: eslint.config.js  index.html  mise.toml  package-lock.json  package.json  vite.config.ts
mitoma-org/frontend-bak/: sver.toml
mitoma-org/frontend-bak/src/: App.test.tsx  App.tsx
mitoma-org/frontend-bak/src/api/: fetchBlogList.ts  fetchHome.ts
mitoma-org/frontend-bak/src/page/: BasicLayout.tsx  BlogList.tsx  ToolList.tsx
mitoma-org/frontend/public/: index.html  manifest.json
mitoma-org/frontend/src/: AboutMe.tsx  App.test.tsx  App.tsx  FetchMarkdown.tsx
mitoma-org/frontend/src/api/: fetchAboutMe.ts  fetchBlog.ts  fetchDiary.ts
mitoma-org/frontend/src/component/: ContentSpacer.tsx  Header.tsx  SideMenu.tsx  SideMenuToggle.tsx
mitoma-org/frontend/src/hook/: useLocalStorage.ts
mitoma-org/frontend/src/page/: AboutMe.tsx  BasicLayout.tsx  Blog.tsx  BlogList.tsx  Diary.tsx  Home.tsx  NotFound.tsx
mitoma-org/infrastructure/: backend.tf  main.tf
rust/: Cargo.toml
rust/bano/: Cargo.toml  test.json  test2.json
rust/bano/.github/workflows/: ci.yml
rust/bano/src/: console.rs  input_receiver.rs  line_generator.rs  main.rs  stream_state.rs
rust/bezier_converter/: Cargo.toml
rust/bezier_converter/examples/: write_bezier.rs
rust/bezier_converter/src/: lib.rs
rust/fonttest/: Cargo.toml
rust/fonttest/examples/: font.rs  font2-debug.rs  font2.rs  image.rs  tri.rs
rust/fonttest/src/: lib.rs
rust/izugo/: Cargo.toml
rust/izugo/src/: main.rs
rust/kono/: Cargo.toml  sver.toml
rust/kono/.github/workflows/: ci.yaml
rust/kono/src/: lib.rs  main.rs
rust/metrics_counter/: Cargo.toml
rust/metrics_counter/src/: lib.rs
rust/nenobi/: Cargo.toml  README.md
rust/nenobi/.github/workflows/: rust.yml
rust/nenobi/examples/: write_to_easing_value_image.rs  write_to_image.rs
rust/nenobi/src/: array.rs  function_macro.rs  functions.rs  lib.rs
rust/rayon_ordered_bridge/: Cargo.toml
rust/rayon_ordered_bridge/src/: lib.rs
rust/sandbox/rayon-test/: Cargo.toml
rust/shuffle/: Cargo.toml
src/: console.rs  functions.rs  input_receiver.rs  lib.rs  line_generator.rs  main.rs  stream_state.rs  tabstops.rs
(+5 files in other folders)
