[package]
name = "bano"
version = "0.1.0"
authors = ["mitoma <mutetheradio@gmail.com>"]
description = "bano is tool of tail json log."
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "*"
clap = "*"
serde_json = "*"
