[package]
edition = "2021"
name = "backend"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.5"
actix-web = "4.5.1"
clap = {version = "4.5.4", features = ["derive"]}
mime = "0.3.17"
pulldown-cmark = "0.12.0"
serde = {version = "1.0.200", features = ["derive"]}
serde_json = "1.0.116"
log = "0.4.21"
env_logger = "0.11.3"
