[package]
name = "bano"
version = "0.1.1"
authors = ["mitoma <mutetheradio@gmail.com>"]
description = "bano is tool of tail json log."
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "3.0.0"
serde_json = "1.0"
crossbeam-channel = "0.5"
nix = "0.27"
clap = { version = "4.4", features = ["derive"] }
