[package]
name = "bano"
version = "0.1.1"
authors = ["mitoma <mutetheradio@gmail.com>"]
description = "bano is tool of tail json log."
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "4.0.0"
serde_json = "1.0.116"
crossbeam-channel = "0.5.12"
nix = "0.29"
clap = { version = "4.5.4", features = ["derive"] }
